--- a/src/entry.tex
+++ b/src/entry.tex
@@ -20,45 +20,16 @@
 
 {\Huge @MONTH @day}
 
-\section*{Training gaussians}
+\section*{Grad propagation}
 
-Back to training on gaussians with informative and anti-informative models.
+The arbitration between spec grad mode and FE grad modes was not finished (cf.
+notes of 2019-04-23/24). Tests were then not made on Gaussians but on MNIST. The difficulty of
+the model to learn the Gaussian dataset with the new formulation of the
+informative regularization might comes from a problem at that level.
 
-Batch normalization improves the learning in this case as well. As recommended by DCGAN, avoid using batch normalization for the first layer of discriminators.
-
-\paragraph{Bug corrected} Evaluation of the generator must be enclosed withing \texttt{G.eval() ... G.train()} if batch normalization is used in the generator.
-
-\paragraph{Dev} Changed the behavious of Gaussian data generation, used to whiten the data
-by dividing by the standard deviation, not anymore. Set the grid following
-\cite{Dumoulin2016}.
-
-\paragraph{Tests} Testing the primal anti-informative regularization, the informative regularization (all with Sinkhorn), the InfoGAN model.
-
-\section*{Cropping the CelebA}
-
-\paragraph{Cropped dataset}
-
-The repo of infogan does not provide the CelebA dataset used in the paper
-experiments. \\
-
-Moreover, none (?) of the
-\href{https://paperswithcode.com/paper/infogan-interpretable-representation-learning}{listed
-repositories for InfoGAN} contains the code for the cropped CelebA dataset. Therefore,
-the images are cropped following
-
-Update: check ALI \href{https://ishmaelbelghazi.github.io/ALI/} for the CelebA and other dataset (code is available, rely on some libraries) \\
-
-The images are therefore manually cropped to cover a  pixel region
-of width 40 pixels and respected ratio 218/178 (original images are 178x218).
-Original images are centered around the eyes, cropped images are more centered
-around the nose. \\
-
-Images are then rezised to 64x64, and saved in a HDF5 file.
-\input{figures/2019-05-06/celeba-crop}
-
-\paragraph{Bug?} There might be a bug in reading (cropped and regular) CelebA from the HDF5 file when using multiple threads. Or it is just displaying images from the file that is not always working.
-
-\input{figures/2019-05-06/celeba-bug}
+Checked out working code on Gaussian that produced thesis plots
+(fig/thesis-b/good-good-25gaussian-zt-128-sinkhorn-entropy) to new branch 0405 is under
+investigation.
 
 \printbibliography{}
 \end{document}
