--- a/include/research_diary.sty
+++ b/include/research_diary.sty
@@ -43,7 +43,6 @@
 \usepackage{amssymb}
 \usepackage{amsthm} % for theorem and definition environement
 \usepackage{array}
-\usepackage[noabbrev]{cleveref}
 
 % \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -103,6 +102,8 @@
     filecolor=magenta,      % color of file links
     urlcolor=blue           % color of external links
 }
+
+\usepackage[noabbrev]{cleveref} % cleveref must be loaded after hyperref
 
 % Settings for pgfplots
 \pgfplotsset{compat=newest}
