--- a/src/entry.tex
+++ b/src/entry.tex
@@ -19,7 +19,7 @@
 % \logoPNG
 
 {\Huge @MONTH @day}
+This is a blank template \cite{zotero-822}
 
-
-\printbibliography{}
+%\printbibliography{}
 \end{document}
