--- a/include/research_diary.sty
+++ b/include/research_diary.sty
@@ -51,6 +51,7 @@
 \usepackage[hmargin=2cm,vmargin=2.5cm]{geometry}
 \usepackage{multirow}
 \usepackage{wrapfig}
+\usepackage{svg}  % allow for svg extensions
 % \usepackage{epsfig}  % for obsolete graphics?
 % for adjust box width graphics
 \usepackage[export]{adjustbox}
@@ -150,6 +151,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%% NEW COMMANDS %%%%%%%%%%%%%%
+%
 \newcommand{\logoEPS}{% useless?
   \noindent % University Logo
   \begin{wrapfigure}{r}{0.1\textwidth}
