cleanup the scripts

--- a/src/entry.tex
+++ b/src/entry.tex
@@ -12,7 +12,7 @@
 \usepackage{research_diary}
 \usepackage{usrcmd}
 % the bibliography, also locate in include/ folder
-\bibliography{bibliography}
+\bibliography{include/bibliography}
 
 
 % Begin document.
@@ -20,12 +20,12 @@
 
 {\Huge @MONTH @day}
 
-\begin{figure}[!t]
+\begin{figure}[h!]
     \includegraphics[width=0.8\textwidth]{latex_logo}
     \caption{\LaTeX logo taken from \cite{wikipedia}}
 \end{figure}
 
 
 
-%\printbibliography{}
+\printbibliography{}
 \end{document}
