--- a/include/usrcmd.sty
+++ b/include/usrcmd.sty
@@ -12,8 +12,8 @@
 
 \DeclareAutoPairedDelimiter{\paren}{\lparen}{\rparen}           % (parentheses)
 \DeclarePairedDelimiter\ang{\langle}{\rangle}  %<angle brackets>UM467248824US
-\DeclarePairedDelimiter\abs{\lvert}{\rvert}    %|absolute value|
-\DeclarePairedDelimiter\norm{\lVert}{\rVert}   %||norm||
+%\DeclarePairedDelimiter\abs{\lvert}{\rvert}    %|absolute value|
+%\DeclarePairedDelimiter\norm{\lVert}{\rVert}   %||norm||
 \DeclareAutoPairedDelimiter{\bkt}{\lbrack}{\rbrack}             % [brackets]
 \DeclareAutoPairedDelimiter{\set}{\{}{\}}         % {set}
 \DeclareAutoPairedDelimiter{\open}{\rbrack}{\lbrack}         % {set}
